fixed dark mode

--- a/src/style.css
+++ b/src/style.css
@@ -81,9 +81,9 @@ button:focus-visible {
 @media (prefers-color-scheme: dark) {
   :root {
     color: #ffffff;
-    background-color: #191919;
+    background-color: #2c2c2c;
   }
   button {
-    background-color: #191919;
+    background-color: #2c2c2c;
   }
 }
